--- a/mock_data/journalforing-opprett/post/opprett-post.json5
+++ b/mock_data/journalforing-opprett/post/opprett-post.json5
@@ -2,7 +2,7 @@
   "avsenderType": "PERSON",
   "arbeidsgiverID": null,
   "representantID": "",
-  "behandlingstypeKode": "SOEKNAD",
+  "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
   "representantKontaktPerson": null,
   "representererKode": "BRUKER",
   "avsenderID": "30098000492",
