--- a/mock_data/behandlinger/behandling-bid-12.json5
+++ b/mock_data/behandlinger/behandling-bid-12.json5
@@ -799,6 +799,14 @@
     "sed": null
   },
   "oppsummering": {
+    "behandlingstema": {
+      "kode": "NY_VURDERING",
+      "term": "Behandle ny vurdering"
+    },
+    "behandlingstype": {
+      "kode": "SOEKNAD",
+      "term": "Søknad"
+    }
     "behandlingsstatus": {
       "kode": "OPPRETTET",
       "term": "Opprettet"
@@ -806,9 +814,5 @@
     "registrertDato": "2018-08-27T07:16:03.273Z",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
-    "behandlingstype": {
-      "kode": "NY_VURDERING",
-      "term": "Behandle forkortet periode"
-    }
   }
 }
