--- a/mock_data/behandlinger/behandling-bid-3.json5
+++ b/mock_data/behandlinger/behandling-bid-3.json5
@@ -957,6 +957,10 @@
     }
   },
   "oppsummering": {
+    "behandlingstema": {
+      "kode": "UTSENDT_ARBEIDSTAKER",
+      "term": "Utsendt arbeidstaker"
+    },
     "behandlingstype": {
       "kode": "SOEKNAD",
       "term": "Søknad"
