--- a/mock_data/behandlinger/behandling-bid-4.json5
+++ b/mock_data/behandlinger/behandling-bid-4.json5
@@ -799,6 +799,10 @@
     "sed": null
   },
   "oppsummering": {
+    "behandlingstema": {
+      "kode": "UTSENDT_ARBEIDSTAKER",
+      "term": "Utsendt arbeidstaker"
+    },
     "behandlingsstatus": {
       "kode": "OPPRETTET",
       "term": "Opprettet"
