--- a/mock_data/behandlinger/behandling-bid-7.json5
+++ b/mock_data/behandlinger/behandling-bid-7.json5
@@ -647,6 +647,10 @@
     "sed": null
   },
   "oppsummering": {
+    "behandlingstema": {
+      "kode": "UTSENDT_ARBEIDSTAKER",
+      "term": "Utsendt arbeidstaker"
+    },
     "behandlingstype": {
       "kode": "SOEKNAD",
       "term": "Søknad"
