--- a/mock_data/journalforing/DOK_3789.json5
+++ b/mock_data/journalforing/DOK_3789.json5
@@ -29,11 +29,7 @@
     }
   ],
   "behandlingsInformasjon": {
-    "sakstype": {
-      "kode": "EU_EOS",
-      "term": "EU/EØS"
-    },
-    "behandlingstype": {
+    "behandlingstema": {
       "kode": "REGISTRERING_UNNTAK_NORSK_TRYGD_UTSTASJONERING",
       "term": "Registrering av unntak fra norsk trygd – utstasjonerte (A009)"
     }
