Legger inn behandlingstema i tillegg til behandlingstype hvor det brukes, og erstatter behandlingstype med behandlingstema ved payloader som brukes til å opprette en ny sak

--- a/mock_data/oppgaver-plukk/oppgaver-plukk.json5
+++ b/mock_data/oppgaver-plukk/oppgaver-plukk.json5
@@ -1,5 +1,6 @@
 {
   "oppgaveID": "123456789",
+  "behandlingstema": "UTSENDT_ARBEIDSTAKER",
   "behandlingstype": "SOEKNAD",
   "saksnummer": "4",
   "journalpostID": "DOK_123",
