--- a/mock_data/fagsaker-notater/notater-snr-4.json5
+++ b/mock_data/fagsaker-notater/notater-snr-4.json5
@@ -2,28 +2,31 @@
   {
     "tekst": 'En',
     "notatId": 1,
-    "redigerbar": true,
+    "redigerbar": false,
     "registrertDato": "2019-04-23T10:02:52.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "LILLA HEST",
-    "behandlingstypeKode": "BESLUTNING_LOVVALG_NORGE"
+    "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
+    "behandlingstypeKode": "SOEKNAD"
   },
   {
     "tekst": 'To',
     "notatId": 2,
-    "redigerbar": true,
+    "redigerbar": false,
     "registrertDato": "2019-04-23T10:02:52.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "HATT GLITRENDE",
+    "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
     "behandlingstypeKode": "SOEKNAD"
   },
   {
     "tekst": 'Tre',
     "notatId": 3,
-    "redigerbar": true,
+    "redigerbar": false,
     "registrertDato": "2019-04-23T10:02:52.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "DOVENT DOVENDYR",
+    "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
     "behandlingstypeKode": "SOEKNAD"
   },
   {
@@ -33,7 +36,8 @@
     "registrertDato": "2019-04-23T10:02:52.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "GIRAFF MAGER",
-    "behandlingstypeKode": "SOEKNAD"
+    "behandlingstemaKode": "UTSENDT_SELVSTENDIG",
+    "behandlingstypeKode": "NY_VURDERING"
   },
   {
     "tekst": 'Fem',
@@ -42,7 +46,8 @@
     "registrertDato": "2019-04-23T10:02:52.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "BUKSE LURVETE",
-    "behandlingstypeKode": "SOEKNAD"
+    "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
+    "behandlingstypeKode": "NY_VURDERING"
   },
   {
     "tekst": 'Seks',
@@ -51,6 +56,7 @@
     "registrertDato": "2019-04-23T10:02:59.031Z",
     "endretDato": "2019-04-23T09:58:23.899Z",
     "registrertAvNavn": "UTVIKLER OPTIMISTISK",
-    "behandlingstypeKode": "SOEKNAD"
+    "behandlingstemaKode": "UTSENDT_ARBEIDSTAKER",
+    "behandlingstypeKode": "NY_VURDERING"
   },
 ]
