--- a/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
+++ b/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
@@ -1,7 +1,6 @@
 {
     "brukerID": "17117802280",
-    "sakstype": "EU_EØS",
-    "behandlingstype": "SOEKNAD",
+    "behandlingstema": "UTSENDT_ARBEIDSTAKER",
     "soknadDto": {
       "periode": {
         fom: "2014-03-12",
