--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -43,12 +43,16 @@
       },
       "behandling": {
         "behandlingID": 4,
+        "behandlingstema": {
+          "kode": "UTSENDT_ARBEIDSTAKER",
+          "term": "Utsendt arbeidstaker"
+        },
         "behandlingstype": {
           "kode": "SOEKNAD",
           "term": "Søknad"
         },
         "behandlingsstatus": {
-          "kode": "UBEH",
+          "kode": "UNDER_BEHANDLING",
           "term": "Under behandling"
         },
         "endretDato": "2018-08-10T15:00:00.622Z",
@@ -77,9 +81,13 @@
       },
       "behandling": {
         "behandlingID": 15,
+        "behandlingstema": {
+          "kode": "ARBEID_FLERE_LAND",
+          "term": "Arbeid i flere land"
+        },
         "behandlingstype": {
-          "kode": "SOEKNAD_ARBEID_FLERE_LAND",
-          "term": "Søknad arbeid i flere land"
+          "kode": "SOEKNAD",
+          "term": "Søknad"
         },
         "behandlingsstatus": {
           "kode": "UBEH",
@@ -111,12 +119,16 @@
       },
       "behandling": {
         "behandlingID": 16,
+        "behandlingstema": {
+          "kode": "ARBEID_NORGE_BOSATT_ANNET_LAND",
+          "term": "Arbeid i Norge - bosatt i et annet land"
+        },
         "behandlingstype": {
-          "kode": "SOEKNAD_ARBEID_NORGE_BOSATT_ANNET_LAND",
-          "term": "Søknad arbeid i Norge - bosatt i et annet land"
+          "kode": "SOEKNAD",
+          "term": "Søknad"
         },
         "behandlingsstatus": {
-          "kode": "UBEH",
+          "kode": "UNDER_BEHANDLING",
           "term": "Under behandling"
         },
         "endretDato": "2018-08-10T15:00:00.622Z",
@@ -145,9 +157,13 @@
       },
       "behandling": {
         "behandlingID": 3,
-        "behandlingstype": {
+        "behandlingstema": {
           "kode": "REGISTRERING_UNNTAK_NORSK_TRYGD_ØVRIGE",
           "term": "Registrering av unntak norsk trygd (A009,A010)"
+        },
+        "behandlingstype": {
+          "kode": "SED",
+          "term": "SED"
         },
         "behandlingsstatus": {
           "kode": "OPPRETTET",
@@ -179,13 +195,17 @@
       },
       "behandling": {
         "behandlingID": 5,
+        "behandlingstema": {
+          "kode": "UTSENDT_SELVSTENDIG",
+          "term": "Utsendt selvstendig næringsdrivende"
+        },
         "behandlingstype": {
           "kode": "ENDRET_PERIODE",
           "term": "Unntak medlemskap"
         },
         "behandlingsstatus": {
-          "kode": "FORL",
-          "term": "Foreløpig lovvalg"
+          "kode": "FORELOEPIG_LOVVALG",
+          "term": "Avventer svar på foreløpig lovvalg"
         },
         "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
@@ -213,12 +233,16 @@
       },
       "behandling": {
         "behandlingID": 4,
+        "behandlingstema": {
+          "kode": "UTSENDT_ARBEIDSTAKER",
+          "term": "Utsendt arbeidstaker"
+        },
         "behandlingstype": {
           "kode": "SOEKNAD",
           "term": "Søknad"
         },
         "behandlingsstatus": {
-          "kode": "UBEH",
+          "kode": "UNDER_BEHANDLING",
           "term": "Under behandling"
         },
         "endretDato": "2018-08-10T15:00:00.622Z",
@@ -247,12 +271,16 @@
       },
       "behandling": {
         "behandlingID": 11,
+        "behandlingstema": {
+          "kode": "TRYGDETID",
+          "term": "Forespørsel om trygdetid"
+        },
         "behandlingstype": {
-          "kode": "VURDER_TRYGDETID",
-          "term": "Behandling av forespørsel om trygdetid"
+          "kode": "SED",
+          "term": "SED"
         },
         "behandlingsstatus": {
-          "kode": "UBEH",
+          "kode": "UNDER_BEHANDLING",
           "term": "Under behandling"
         },
         "endretDato": "2018-08-10T15:00:00.622Z",
@@ -281,9 +309,13 @@
       },
       "behandling": {
         "behandlingID": 13,
+        "behandlingstema": {
+          "kode": "IKKE_YRKESAKTIV",
+          "term": "Ikke yrkesaktiv"
+        },
         "behandlingstype": {
-          "kode": "SOEKNAD_IKKE_YRKESAKTIV",
-          "term": "Søknad ikke yrkesaktiv"
+          "kode": "SOEKNAD",
+          "term": "Søknad"
         },
         "behandlingsstatus": {
           "kode": "UNDER_BEHANDLING",
@@ -315,9 +347,13 @@
       },
       "behandling": {
         "behandlingID": 14,
-        "behandlingstype": {
+        "behandlingstema": {
           "kode": "BESLUTNING_LOVVALG_NORGE",
-          "term": "Behandling av at utenlandske myndigheter har utpekt Norge som lovvalgsland (A003)"
+          "term": "Norge er utpekt (A003)"
+        },
+        "behandlingstype": {
+          "kode": "SED",
+          "term": "SED"
         },
         "behandlingsstatus": {
           "kode": "UNDER_BEHANDLING",
