Sett behandlingstema for bid 12

--- a/mock_data/behandlinger/behandling-bid-12.json5
+++ b/mock_data/behandlinger/behandling-bid-12.json5
@@ -800,13 +800,13 @@
   },
   "oppsummering": {
     "behandlingstema": {
+      "kode": "UTSENDT_ARBEIDSTAKER",
+      "term": "Utsendt arbeidstaker"
+    },
+    "behandlingstype": {
       "kode": "NY_VURDERING",
       "term": "Behandle ny vurdering"
     },
-    "behandlingstype": {
-      "kode": "SOEKNAD",
-      "term": "Søknad"
-    }
     "behandlingsstatus": {
       "kode": "OPPRETTET",
       "term": "Opprettet"
