Fikser en testfeil

--- a/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
+++ b/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
@@ -1,5 +1,6 @@
 {
     "brukerID": "17117802280",
+    "sakstype": "EU_EOS",
     "behandlingstema": "UTSENDT_ARBEIDSTAKER",
     "soknadDto": {
       "periode": {
