--- a/mock_data/journalforing/DOK_3789.json5
+++ b/mock_data/journalforing/DOK_3789.json5
@@ -29,6 +29,10 @@
     }
   ],
   "behandlingsInformasjon": {
+    "sakstype": {
+      "kode": "EU_EOS",
+      "term": "EU/EØS"
+    },
     "behandlingstema": {
       "kode": "REGISTRERING_UNNTAK_NORSK_TRYGD_UTSTASJONERING",
       "term": "Registrering av unntak fra norsk trygd – utstasjonerte (A009)"
