--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -373,6 +373,44 @@
       "land": [],
       "versjon": 1,
       "ansvarligID": "Z991001"
+    },
+    {
+      "oppgaveID": "174562068",
+      "sammensattNavn": "GLITRENDE HATT",
+      "fnr": "28106600300",
+      "saksnummer": "17",
+      "sakstype": {
+        "kode": "TRYGDEAVTALE",
+        "term": "Trygdeavtale"
+      },
+      "behandling": {
+        "behandlingID": 17,
+        "behandlingstema": {
+          "kode": "ARBEID_ETT_LAND_ØVRIG",
+          "term": "Øvrig arbeid og næring"
+        },
+        "behandlingstype": {
+          "kode": "SOEKNAD",
+          "term": "Søknad"
+        },
+        "behandlingsstatus": {
+          "kode": "UNDER_BEHANDLING",
+          "term": "Under behandling"
+        },
+        "endretDato": "2018-08-10T15:00:00.622Z",
+        "erUnderOppdatering": false,
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
+      },
+      "aktivTil": "2018-01-28",
+      "periode": {
+        "fom": "2018-10-01",
+        "tom": "2019-08-31"
+      },
+      "prioritet": "HOY",
+      "land": ["NO"],
+      "versjon": 1,
+      "ansvarligID": "Z991001"
     }
   ]
 }
