Nye felt fritekstSed for fritekst til SED ved anmodning om unntak, vedtak og utpeking av annet land

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-post.json5
@@ -1,6 +1,7 @@
 {
   "behandlingsresultatTypeKode": "FASTSATT_LOVVALGSLAND",
   "fritekst": "Fritekst",
+  "fritekstSed": "Fritekst til SED",
   "mottakerinstitusjoner": ["NO:NAVT003"],
   "revurderBegrunnelse": "Begrunnelse",
   "vedtakstype": "KORRIGERT_VEDTAK"
