--- a/mock_data/fagsaker-utpek/post/fagsaker-utpek-post.json5
+++ b/mock_data/fagsaker-utpek/post/fagsaker-utpek-post.json5
@@ -1,3 +1,4 @@
 {
-  "mottakerinstitusjoner": ["NAV Test 001"]
+  "mottakerinstitusjoner": ["NAV Test 001"],
+  "fritekstSed": "fritekst til SED"
 }
