--- a/mock_data/vilkaar/vilkaar-bid-17.json5
+++ b/mock_data/vilkaar/vilkaar-bid-17.json5
@@ -1,1 +1,8 @@
-[]
+[
+  {
+    vilkaar: 'FO_883_2004_INNGANGSVILKAAR',
+    oppfylt: true,
+    begrunnelseKoder: [],
+    begrunnelseFritekst: null
+  }
+]
