--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-16.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-16.json5
@@ -4,5 +4,6 @@
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
   "utfallRegistreringUnntak": null,
+  "utfallUtpeking": null,
   "vedtakstype": "FØRSTEGANGSVEDTAK"
 }
