--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-3.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-3.json5
@@ -4,5 +4,6 @@
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
   "utfallRegistreringUnntak": "GODKJENT",
+  "utfallUtpeking": null,
   "vedtakstype": "FØRSTEGANGSVEDTAK"
 }
