Fritekst for orienteringsbrev ved utpeking

--- a/mock_data/fagsaker-utpek/post/fagsaker-utpek-post.json5
+++ b/mock_data/fagsaker-utpek/post/fagsaker-utpek-post.json5
@@ -1,4 +1,5 @@
 {
   "mottakerinstitusjoner": ["NAV Test 001"],
-  "fritekstSed": "fritekst til SED"
+  "fritekstSed": "fritekst til SED",
+  "fritekstBrev": "Fritekst til brev"
 }
