--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-12.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-12.json5
@@ -124,6 +124,13 @@
         "foretakOrgnr": "967032271"
       }
     ],
+    "luftfartBase": [
+      {
+        "hjemmebaseNavn": "Dunfjæder",
+        "hjemmebaseLand": "GB",
+        "typeFlyvninger": "NASJONAL"
+      }
+    ],
     "soeknadsland": {
       "landkoder": ["DK"]
     },
