--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-16.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-16.json5
@@ -124,6 +124,7 @@
         "foretakOrgnr": "967032271"
       }
     ],
+    "luftfartBase": [],
     "soeknadsland": {
       "landkoder": ["DK"]
     },
