--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
@@ -91,7 +91,7 @@
       "trygdeavgiftTrukketGjennomSkattDato": null
     },
     "maritimtArbeid": [],
-    "luftfartBase": [],
+    "luftfartBaser": [],
     "soeknadsland": {
       "landkoder": ["SE"]
     },
