--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -84,7 +84,7 @@
         "foretakOrgnr": "967032271"
       }
     ],
-    "luftfartBase": [
+    "luftfartBaser": [
       {
         "hjemmebaseNavn": "Dunfjæder",
         "hjemmebaseLand": "GB",
