--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -123,7 +123,7 @@
         "foretakOrgnr": "967032271"
       }
     ],
-    "luftfartBase": [
+    "luftfartBaser": [
       {
         "hjemmebaseNavn": "Dunfjæder",
         "hjemmebaseLand": "GB",
