--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-7.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-7.json5
@@ -91,7 +91,7 @@
       "trygdeavgiftTrukketGjennomSkattDato": "2018-06-01"
     },
     "maritimtArbeid": [],
-    "luftfartBase": [],
+    "luftfartBaser": [],
     "soeknadsland": {
       "landkoder": ["FR"]
     },
