Legg til luftfartBaser i sedGrunnlag

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -102,6 +102,7 @@
         "foretakOrgnr": "967032271"
       }
     ],
+    "luftfartBaser": [],
     "soeknadsland": {
       "landkoder": ["DK"]
     },
