--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -125,6 +125,7 @@
       "ekstraArbeidsgivere": []
     },
     "maritimtArbeid": [],
+    "luftfartBaser": [],
     "bosted": {
       "intensjonOmRetur": null,
       "antallMaanederINorge": 0,
