--- a/mock_data/vilkaar/post/vilkaar-post.json5
+++ b/mock_data/vilkaar/post/vilkaar-post.json5
@@ -3,6 +3,7 @@
     "vilkaar": "ART12_1_FORUTGAAENDE_MEDLEMSKAP",
     "oppfylt": true,
     "begrunnelseKoder": [],
-    "begrunnelseFritekst": null
+    "begrunnelseFritekst": null,
+    "begrunnelseFritekstEngelsk": null
   }
 ]
