--- a/mock_data/vilkaar/vilkaar-bid-5.json5
+++ b/mock_data/vilkaar/vilkaar-bid-5.json5
@@ -3,6 +3,7 @@
     vilkaar: 'FO_883_2004_INNGANGSVILKAAR',
     oppfylt: true,
     begrunnelseKoder: [],
-    begrunnelseFritekst: null
+    begrunnelseFritekst: null,
+    begrunnelseFritekstEngelsk: null,
   }
 ]
