Mockdata: Feil navn på mappe forårsaket at det ikke ble kjørt tester på behandlinger. Legger til felter for å passere test.

--- a/mock_data/behandlinger-behandling/behandling-bid-10.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-10.json5
@@ -363,6 +363,7 @@
       "term": "Avventer svar fra utenlandsk trygdemyndighet"
     },
     "endretDato": "2019-04-23T10:02:52.031Z",
+    "endretAvNavn": "HATT GLITRENDE",
     "registrertDato": "2019-04-23T09:58:23.899Z",
     "sisteOpplysningerHentetDato": "2019-04-23T09:58:39.751Z"
   }
