--- a/mock_data/behandlinger-behandling/behandling-bid-12.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-12.json5
@@ -814,5 +814,6 @@
     "registrertDato": "2018-08-27T07:16:03.273Z",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
+    "endretAvNavn": "HATT GLITRENDE"
   }
 }
