--- a/mock_data/behandlinger-behandling/behandling-bid-17.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-17.json5
@@ -1,5 +1,5 @@
 {
-  "behandlingID": 4,
+  "behandlingID": 17,
   "redigerbart": true,
   "saksopplysninger": {
     "arbeidsforhold": [
@@ -800,12 +800,8 @@
   },
   "oppsummering": {
     "behandlingstema": {
-      "kode": "ARBEID_NORGE_BOSATT_ANNET_LAND",
-      "term": "Arbeid i Norge - bosatt i et annet land"
-    },
-    "behandlingstype": {
-      "kode": "SOEKNAD_ARBEID_NORGE_BOSATT_ANNET_LAND",
-      "term": "Søknad arbeid i Norge - bosatt i et annet land"
+      "kode": "ARBEID_ETT_LAND_ØVRIG",
+      "term": "Øvrig arbeid og næring"
     },
     "behandlingsstatus": {
       "kode": "OPPRETTET",
@@ -814,5 +810,10 @@
     "registrertDato": "2018-08-27T07:16:03.273Z",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
+    "endretAvNavn": "HATT GLITRENDE",
+    "behandlingstype": {
+      "kode": "SOEKNAD",
+      "term": "Søknad"
+    }
   }
 }
