--- a/mock_data/behandlinger-behandling/behandling-bid-8.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-8.json5
@@ -370,6 +370,7 @@
     },
     "registrertDato": "2018-10-02T07:04:35.403Z",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
-    "endretDato": "2018-10-02T07:04:35.403Z"
+    "endretDato": "2018-10-02T07:04:35.403Z",
+    "endretAvNavn": "HATT GLITRENDE"
   }
 }
