Legg til rette for liste med mottakerIder i opprett BUC

--- a/mock_data/eessi-bucer/post/eessi-bucer-post.json5
+++ b/mock_data/eessi-bucer/post/eessi-bucer-post.json5
@@ -1,7 +1,9 @@
 {
   "bucType": "LA_BUC_01",
   "mottakerLand": "NO",
-  "mottakerId": "NAVT002",
+  "mottakerIder": [
+    "NAVT002"
+  ],
   "vedlegg": [
     {
       "journalpostID": "4",
