Legg til rette for liste med mottakerLand i opprett BUC

--- a/mock_data/eessi-bucer/post/eessi-bucer-post.json5
+++ b/mock_data/eessi-bucer/post/eessi-bucer-post.json5
@@ -1,6 +1,8 @@
 {
   "bucType": "LA_BUC_01",
-  "mottakerLand": "NO",
+  "mottakerLand": [
+    "NO"
+  ],
   "mottakerIder": [
     "NAVT002"
   ],
