--- a/mock_data/behandlinger-behandling/behandling-bid-14.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-14.json5
@@ -796,7 +796,21 @@
     "sakOgBehandling": {
       "eosBarnetrygd": true
     },
-    "sed": null
+    "sed": {
+      "rinaSaksnummer": "181973",
+      "rinaDokumentID": "ad6335c6a92341f2830a873a331a5ea5",
+      "fnr": "19117220349",
+      "lovvalgsperiode": {
+        "fom": "2012-12-12",
+        "tom": "2014-12-12"
+      },
+      "lovvalgsbestemmelse": "FO_883_2004_ART13_1",
+      "lovvalgslandKode": "DK",
+      "erEnding": false,
+      "statsborgerskapKoder": [
+        "NO"
+      ]
+    }
   },
   "oppsummering": {
     "behandlingstema": {
