Send ytterligereinformasjon som eget felt for Brev A001

--- a/mock_data/dokumenter-pdf-utkast-brev/post/utkast_og_opprett-post.json5
+++ b/mock_data/dokumenter-pdf-utkast-brev/post/utkast_og_opprett-post.json5
@@ -1,5 +1,6 @@
 {
   "mottaker": "ARBEIDSGIVER",
   "fritekst": "null",
-  "begrunnelseKode": "IKKE_VESENTLIG_VIRKSOMHET"
+  "begrunnelseKode": "IKKE_VESENTLIG_VIRKSOMHET",
+  "ytterligereInformasjon": "Ekstra informasjon."
 }
