--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -76,7 +76,10 @@
       "andelKontrakterINorge": 30.5,
       "arbeidstakereRekruttertILand": "SE",
       "oppdragsKontrakterIHovedsakInngaattILand": "NO",
-      "ekstraArbeidsgivere": []
+      "ekstraArbeidsgivere": [
+        "123123123",
+        "943049467"
+      ]
     },
     "maritimtArbeid": [
       {
@@ -101,125 +104,7 @@
       "tom": "2019-01-02"
     },
     "overgangsregelbestemmelser": [],
-    "norskeArbeidsgivere": [
-      {
-        "orgnr": "873152362",
-        "navn": "Norsk organisasjon med gyldig orgnr",
-        "oppstartdato": null,
-        "organisasjonsform": null,
-        "forretningsadresse": {
-          "postnr": "3936",
-          "gateadresse": {
-            "gatenummer": null,
-            "husbokstav": null,
-            "husnummer": null,
-            "gatenavn": "Olav Kyrres gate 9"
-          },
-          "poststed": "PORSGRUNN",
-          "land": "NORGE"
-        },
-        "postadresse": {
-          "postnr": "3936",
-          "gateadresse": {
-            "gatenummer": null,
-            "husbokstav": null,
-            "husnummer": null,
-            "gatenavn": "Olav Kyrres gate 9"
-          },
-          "poststed": "PORSGRUNN",
-          "land": "NORGE"
-        },
-      },
-      {
-        "orgnr": "111111111",
-        "navn": "Norsk organisasjon uten gyldig orgnr",
-        "oppstartdato": null,
-        "organisasjonsform": null,
-        "forretningsadresse": {
-          "postnr": "0463",
-          "gateadresse": {
-            "gatenummer": null,
-            "husbokstav": null,
-            "husnummer": null,
-            "gatenavn": "Stavangergata 14B"
-          },
-          "poststed": "OSLO",
-          "land": "NORGE"
-        },
-        "postadresse": {
-          "postnr": "0463",
-          "gateadresse": {
-            "gatenummer": null,
-            "husbokstav": null,
-            "husnummer": null,
-            "gatenavn": "Stavangergata 14B"
-          },
-          "poststed": "OSLO",
-          "land": "NORGE"
-        },
-      },
-    ],
     "ytterligereInformasjon": null
-  },
-  "tilleggsData": {
-    "organisasjoner": [
-      {
-        "orgnr" : "910099035",
-        "oppstartdato" : null,
-        "postadresse" : {
-          "postnr" : "3936",
-          "gateadresse" : {
-            "gatenummer" : null,
-            "husbokstav" : null,
-            "husnummer" : null,
-            "gatenavn" : "Olav Kyrres gate 9"
-          },
-          "poststed" : "PORSGRUNN",
-          "land" : "NORGE"
-        },
-        "organisasjonsform" : null,
-        "navn" : "SKARSVÅG OG VANSE",
-        "forretningsadresse" : {
-          "postnr" : "3936",
-          "gateadresse" : {
-            "gatenummer" : null,
-            "husbokstav" : null,
-            "husnummer" : null,
-            "gatenavn" : "Olav Kyrres gate 9"
-          },
-          "poststed" : "PORSGRUNN",
-          "land" : "NORGE"
-        }
-      },
-      {
-        "orgnr": "910253158",
-        "navn": "MULTICONSULT ASA",
-        "oppstartdato" : null,
-        "forretningsadresse": {
-          "gateadresse": {
-            "gatenummer" : null,
-            "husbokstav" : null,
-            "husnummer" : null,
-            "gatenavn": "Nedre Skøyen vei 2"
-          },
-          "postnr": "0276",
-          "poststed": "OSLO",
-          "land": "NORGE"
-        },
-        "organisasjonsform" : null,
-        "postadresse": {
-          "gateadresse": {
-            "gatenummer" : null,
-            "husbokstav" : null,
-            "husnummer" : null,
-            "gatenavn": "Postboks 265  Skøyen"
-          },
-          "postnr": "0213",
-          "poststed": "OSLO",
-          "land": "NORGE"
-        }
-      }
-    ]
   },
   "type": "SED",
 }
