Lagt inn dummy-sak med FTRL sakstype og FTRL behandlingstema

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -411,6 +411,44 @@
       "land": ["NO"],
       "versjon": 1,
       "ansvarligID": "Z991001"
+    },
+    {
+      "oppgaveID": "174562067",
+      "sammensattNavn": "VAKKER GAPAHUK",
+      "fnr": "26096522249",
+      "saksnummer": "2",
+      "sakstype": {
+        "kode": "FTRL",
+        "term": "Folketrygdloven"
+      },
+      "behandling": {
+        "behandlingID": 2,
+        "behandlingstema": {
+          "kode": "ARBEID_I_UTLANDET",
+          "term": "Arbeid i utlandet"
+        },
+        "behandlingstype": {
+          "kode": "SOEKNAD",
+          "term": "Søknad"
+        },
+        "behandlingsstatus": {
+          "kode": "UNDER_BEHANDLING",
+          "term": "Under behandling"
+        },
+        "endretDato": "2018-08-10T15:00:00.622Z",
+        "erUnderOppdatering": false,
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
+      },
+      "aktivTil": "2018-01-28",
+      "periode": {
+        "fom": "2018-10-01",
+        "tom": "2019-08-31"
+      },
+      "prioritet": "HOY",
+      "land": ["NO"],
+      "versjon": 1,
+      "ansvarligID": "Z991001"
     }
   ]
 }
