--- a/mock_data/statistikk/statistikk.json5
+++ b/mock_data/statistikk/statistikk.json5
@@ -13,6 +13,7 @@
     "ANMODNING_OM_UNNTAK_HOVEDREGEL": 1,
     "ØVRIGE_SED_MED": 5,
     "ØVRIGE_SED_UFM": 6,
-    "TRYGDETID": 9
+    "TRYGDETID": 9,
+    "ARBEID_I_UTLANDET": 1
   }
 }
