--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
@@ -3,6 +3,7 @@
     "personOpplysninger": {
       "utenlandskIdent": [],
       "medfolgendeFamilie": [],
+      "medfolgendeBarn": [],
       "medfolgendeAndre": null
     },
     "arbeidUtland": [{
