--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -124,6 +124,7 @@
       "medfolgendeFamilie" : [
         "30098000492"
       ],
+      "medfolgendeBarn": [],
       "medfolgendeAndre" : "28106600300"
     },
     "soeknadsland": {
