--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -8,6 +8,7 @@
         }
       ],
       "medfolgendeFamilie": ["30098000492"],
+      "medfolgendeBarn": ["31031779459"],
       "medfolgendeAndre": "28106600300"
     },
     "arbeidUtland": [{
