--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -26,6 +26,7 @@
         }
       ],
       "medfolgendeFamilie": [],
+      "medfolgendeBarn": [],
       "medfolgendeAndre": null
     },
     "arbeidUtland": [
