Legg til fnr+navn for medfølgende barn + fjern medfølgende familie/andre

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -2,9 +2,7 @@
   "data": {
     "personOpplysninger": {
       "utenlandskIdent": [],
-      "medfolgendeFamilie": [],
-      "medfolgendeBarn": [],
-      "medfolgendeAndre": null
+      "medfolgendeBarn": []
     },
     "arbeidUtland": [
       {
