--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
@@ -7,9 +7,12 @@
           "landkode": "DK"
         }
       ],
-      "medfolgendeFamilie": ["30098000492"],
-      "medfolgendeBarn": ["31031779459"],
-      "medfolgendeAndre": "28106600300"
+      "medfolgendeBarn": [
+        {
+          "fnr": "31031779459",
+          "navn": null
+        }
+      ]
     },
     "arbeidUtland": [{
       "adresse": {
