--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-9.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-9.json5
@@ -2,9 +2,7 @@
   "data": {
     "personOpplysninger": {
       "utenlandskIdent": [{"ident": "38288D-A", "landkode": "IT"}],
-      "medfolgendeFamilie": [],
-      "medfolgendeBarn": [],
-      "medfolgendeAndre": null
+      "medfolgendeBarn": []
     },
     "arbeidUtland": [{
       "adresse": {
