--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -52,9 +52,11 @@
       "utsendteNeste12Mnd": null,
       "antallAdmAnsatte": null,
       "antallAnsatte": null,
+      "antallUtsendte": null,
       "andelOmsetningINorge": null,
       "andelOppdragINorge": null,
       "andelKontrakterINorge": null,
+      "andelRekruttertINorge": null,
       "arbeidstakereRekruttertILand": null,
       "oppdragsKontrakterIHovedsakInngaattILand": null,
       "ekstraArbeidsgivere": []
