Bruker virksomhetIDer konsekvent

--- a/mock_data/avklartefakta-oppsummering/avklartefakta-oppsummering-bid-2.json5
+++ b/mock_data/avklartefakta-oppsummering/avklartefakta-oppsummering-bid-2.json5
@@ -1,5 +1,5 @@
 {
   "virksomheter": {
-    "orgnummer": ["910099035", "2c5ea4c0-4067-11e9-8bad-9b1deb4d3b7d", "910253158"]
+    "virksomhetIDer": ["910099035", "2c5ea4c0-4067-11e9-8bad-9b1deb4d3b7d", "910253158"]
   }
 }
