Legger til innvilgelsesresultat på /folketrygden endepunktet

--- a/mock_data/kodeverk-melosys-internt-folketrygden/kodeverk-melosys-internt-folketrygden.json5
+++ b/mock_data/kodeverk-melosys-internt-folketrygden/kodeverk-melosys-internt-folketrygden.json5
@@ -116,5 +116,19 @@
         "term": "Arbeider i multinasjonalt selskap"
       }
     ]
-  }
+  },
+  "InnvilgelsesResultat": [
+    {
+      "kode": "DELVIS_INNVILGET",
+      "term": "Delvis innvilget"
+    },
+    {
+      "kode": "AVSLAATT",
+      "term": "Avslått"
+    },
+    {
+      "kode": "INNVILGET",
+      "term": "Innvilget"
+    }
+  ]
 }
