--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-15.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-15.json5
@@ -10,6 +10,7 @@
       ],
       "medfolgendeFamilie": [
         {
+          "uuid": '416c97d5-fd1d-4eff-952c-edc42aeb40a0',
           "fnr": "31031779459",
           "navn": "BRÅKETE GYNGEHEST",
           "relasjonsrolle": "BARN"
